[workspace]
resolver = "2"

members = [
    "meta",
    "c-api",
    "vm-executor",
    "vm-executor-experimental",
    "vm-executor-wasmer",
]

[patch.crates-io]
# Overrides the `dharitri-vm-executor` dependency to use the local path,
# for local builds and CI. Required by dharitri-vm-executor-wasmer, which
# cannot set the path directly without breaking external consumers.
dharitri-vm-executor = { path = "vm-executor" }
