[package]
name = "dharitri-vm-executor-c-api"
version = "2.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
meta = { path = "../meta" }
dharitri-vm-executor = { path = "../vm-executor" }
dharitri-vm-executor-wasmer = { path = "../vm-executor-wasmer" }

lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }

chrono = "0.4.23"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
cbindgen = "0.29"
