[package]
name = "dharitri-vm-executor-wasmer-experimental"
version = "2.0.0"
edition = "2024"

authors = ["DharitrI <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/mangonui/drt-rs-vm-executor"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI VM Wasmer adapter (experimental)"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies.dharitri-vm-executor]
version = "2.0.0"
path = "../vm-executor"

[dependencies]
wasmer = { version = "6.1", default-features = false, features = [
    "singlepass",
    "sys",
    "wat",
] }
wasmer-types = "6.1"

log = "0.4"
loupe = "0.1.3"
rc-new-cyclic-fallible = "1.0.0"
thiserror = "2.0"
