[package]
name = "dharitri-vm-executor"
version = "2.0.0"
edition = "2024"

authors = ["DharitrI <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/mangonui/drt-rs-vm-executor"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI VM executor interface"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
